DDA-2: fixed found bug text in footer

--- a/src/app/[lng]/components/layout/footer.module.scss
+++ b/src/app/[lng]/components/layout/footer.module.scss
@@ -83,8 +83,7 @@
 }
 
 .found_bug {
-  display: inline-flex;
+  display: inline-block;
   align-items: center;
   line-height: 1em;
-  gap: 0.5em;
 }
